fix stretchy images (maybe)

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
+html, body {
+	margin: 0px;
+	height: 100%;
+	width: 100%;
+}
+
+
 body {
 	background-color: gray;
 	color: white;
 	font-family: sans-serif;
-	width: 100%;
-	height: 100%;
 }
 
 h3 {
@@ -19,6 +24,11 @@ button {
 	color: white;
 	border-radius: 5px;
 	font-size: 23px;
+}
+
+img {
+	width: 100%;
+	height: 100%;
 }
 
 .private, .public {
